# graphy

./: .gitignore  README.md
client/src/: Color.elm  Main.elm
server/: Cargo.toml
server/src/: main.rs
www/: index.html
