[package]
name = "graphy-server"
version = "0.1.0"
authors = ["Jan Steffens <jan-steffens@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
actix-web = "1.0.8"
actix-files = "0.1.6"
futures = "0.1.29"